[package]
name = "sgmenu"
version = "0.1.0"
authors = ["David McKinney <mckinney@subgraph.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk-layer-shell-rs = { path = "vendor/gtk-layer-shell-rs/" }
log = "0.4.11"
env_logger = "0.5.5"
gtk = { version = "0.9.0", features = ["v3_16"] }
gdk = "0.7.0"
gio = { version = "0.3.0", features = ["v2_64"] }
glib = "0.4.1"
pango = "0.9.1"
gdk-pixbuf = "0.3.0"
